testdata/baselines/reference/submodule/conformance/errorOnFunctionReturnType.errors.txt
foo.js(20,12): error TS8010: Type annotations can only be used in TypeScript files.
foo.js(21,5): error TS2322: Type '() => void' is not assignable to type 'FunctionReturningPromise'.
  Type 'void' is not assignable to type 'Promise<number>'.
foo.js(44,12): error TS8010: Type annotations can only be used in TypeScript files.
foo.js(45,5): error TS2322: Type '() => void' is not assignable to type 'FunctionReturningNever'.
  Type 'void' is not assignable to type 'never'.


==== foo.js (4 errors) ====
    /**
     * @callback FunctionReturningPromise
     * @returns {Promise<number>}
     */
    
    /** @type {FunctionReturningPromise} */
    function testPromise1() {
        console.log("Nope");
    }
    
    /** @type {FunctionReturningPromise} */
    async function testPromise2() {
        return "asd";
    }
    
    var testPromise3 = /** @type {FunctionReturningPromise} */ function() {
        console.log("test")
    }
    
    /** @type {FunctionReturningPromise} */
               ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    var testPromise4 = function() {
        ~~~~~~~~~~~~
!!! error TS2322: Type '() => void' is not assignable to type 'FunctionReturningPromise'.
!!! error TS2322:   Type 'void' is not assignable to type 'Promise<number>'.
        console.log("test")
    }
    
    /**
     * @callback FunctionReturningNever
     * @returns {never}
     */
    
    /** @type {FunctionReturningNever} */
    function testNever1() {
    
    }
    
    /** @type {FunctionReturningNever} */
    async function testNever2() {
        return "asd";
    }
    
    var testNever3 = /** @type {FunctionReturningNever} */ function() {
        console.log("test")
    }
    
    /** @type {FunctionReturningNever} */
               ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    var testNever4 = function() {
        ~~~~~~~~~~
!!! error TS2322: Type '() => void' is not assignable to type 'FunctionReturningNever'.
!!! error TS2322:   Type 'void' is not assignable to type 'never'.
        console.log("test")
    }